fix jdk8, jdk11, jdk17, weld2.3, weld3.1