@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <httpcore.version>4.4.1</httpcore.version>
         <httpclient.version>4.5</httpclient.version>
-        <rest-assured.version>4.0.0</rest-assured.version>
+        <rest-assured.version>4.5.1</rest-assured.version>
     </properties>
 
     <profiles>
@@ -39,7 +39,6 @@
         <profile>
             <id>weld3.1</id>
             <properties>
-                <resteasy.version>4.7.4.Final</resteasy.version>
                 <jackson2.version>2.12.3</jackson2.version>
             </properties>
             <dependencies>
@@ -57,12 +56,61 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>jdk8</id>
+            <activation>
+                <jdk>(,1.8)></jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M3</version>
+                        <configuration>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk11ff</id>
+            <activation>
+                <jdk>(11,)></jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.0.0-M3</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <javax.xml.parsers.DocumentBuilderFactory>
+                                    com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
+                                </javax.xml.parsers.DocumentBuilderFactory>
+                            </systemPropertyVariables>
+
+                            <reportFormat>plain</reportFormat>
+                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <!-- Sets the VM argument line used when unit tests are run. -->
+                            <!--argLine> - -add-modules java.xml,java.sql -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006</argLine-->
+                            <argLine>
+                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006 --add-opens
+                                java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <modules>
-        <!--module>ex1-1entity</module>
-        <module>ex1-1entity-el</module>
-        <module>ex1-1entity-hb</module-->
+        <module>ex1-1entity</module>
+        <!--module>ex1-1entity-el</module-->
+        <module>ex1-1entity-hb</module>
         <module>ex1-1entity5</module>
         <module>ex1-2entity4220b_5</module>
         <module>ex2-syncconsumed</module>
@@ -72,15 +120,6 @@
         <module>jms</module>
         <module>rest</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>net.oneandone.ioc-unit</groupId>
-            <artifactId>ioc-unit</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-    </dependencies>
-
 
     <build>
         <plugins>
@@ -99,26 +138,6 @@
                 <version>2.8.2</version>
                 <configuration>
                     <skip>true</skip>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <systemPropertyVariables>
-                        <javax.xml.parsers.DocumentBuilderFactory>
-                            com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
-                        </javax.xml.parsers.DocumentBuilderFactory>
-                    </systemPropertyVariables>
-
-                    <reportFormat>plain</reportFormat>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <!-- Sets the VM argument line used when unit tests are run. -->
-                    <!--argLine> - -add-modules java.xml,java.sql -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006</argLine-->
-                    <argLine>
-                        -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006
-                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
